applications/sealed-secrets/deployment-sealed-secrets-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealed-secrets-controller
  namespace: kube-system
spec:
  template:
    spec:
      containers:
      - args: []
        command:
        - controller
        - --key-renew-period=0
        - --update-status
        env: []
        name: sealed-secrets-controller
