applications/sealed-secrets/ingress-sealed-secrets.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
metadata:
  name: sealed-secrets
spec:
  rules:
  - host: sealed-secrets.k3sdemo.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sealed-secrets-controller
            port:
              number: 8080
